[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/LoadGame.gd" type="Script" id=1]
[ext_resource path="res://assets/backgrounds/spacebgred.png" type="Texture" id=2]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/Btn_Quit.gd" type="Script" id=4]
[ext_resource path="res://scripts/LoadButtonOne.gd" type="Script" id=5]
[ext_resource path="res://scripts/LoadButtonTwo.gd" type="Script" id=6]
[ext_resource path="res://scripts/LoadButtonThree.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 39
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 3 )

[node name="LoadGame" type="Control"]
margin_right = 1281.0
margin_bottom = 721.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1293.0
margin_bottom = 717.0
texture = ExtResource( 2 )

[node name="CancelButton" type="Button" parent="."]
margin_left = 532.829
margin_top = 601.416
margin_right = 787.829
margin_bottom = 702.416
custom_fonts/font = SubResource( 1 )
text = "Cancel"
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 215.854
margin_top = 43.6267
margin_right = 1244.85
margin_bottom = 570.627

[node name="LoadOne" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 300.0
margin_bottom = 527.0
rect_min_size = Vector2( 300, 527 )

[node name="LOImage" type="TextureRect" parent="HBoxContainer/LoadOne"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )

[node name="LOData" type="TextEdit" parent="HBoxContainer/LoadOne"]
margin_top = 204.0
margin_right = 300.0
margin_bottom = 434.0
rect_min_size = Vector2( 0, 230 )
readonly = true

[node name="LOButton" type="Button" parent="HBoxContainer/LoadOne"]
margin_top = 438.0
margin_right = 300.0
margin_bottom = 508.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/font = SubResource( 2 )
text = "Load"
script = ExtResource( 5 )

[node name="LoadTwo" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 527.0
rect_min_size = Vector2( 300, 0 )

[node name="LTWImage" type="TextureRect" parent="HBoxContainer/LoadTwo"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )

[node name="LTWData" type="TextEdit" parent="HBoxContainer/LoadTwo"]
margin_top = 204.0
margin_right = 300.0
margin_bottom = 434.0
rect_min_size = Vector2( 0, 230 )
readonly = true

[node name="LTWButton" type="Button" parent="HBoxContainer/LoadTwo"]
margin_top = 438.0
margin_right = 300.0
margin_bottom = 508.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/font = SubResource( 3 )
text = "Load"
script = ExtResource( 6 )

[node name="LoadThree" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 608.0
margin_right = 908.0
margin_bottom = 527.0
rect_min_size = Vector2( 300, 0 )

[node name="LTHImage" type="TextureRect" parent="HBoxContainer/LoadThree"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )

[node name="LTHData" type="TextEdit" parent="HBoxContainer/LoadThree"]
margin_top = 204.0
margin_right = 300.0
margin_bottom = 434.0
rect_min_size = Vector2( 0, 230 )
readonly = true

[node name="LTHButton" type="Button" parent="HBoxContainer/LoadThree"]
margin_top = 438.0
margin_right = 300.0
margin_bottom = 508.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/font = SubResource( 4 )
text = "Load"
script = ExtResource( 7 )
